[tool.poetry]
name = "sample-pyrogram-bot"
version = "0.1.0"
description = ""
authors = ["Petr Lavrov <calmmage@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Pyrogram = "*"
pydantic = "*"
pydantic-settings = "*"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.0.0"
pandas = "*"
black = "*"
pytest = "*"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
